// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionActions /> when more than two responses are present match snapshot if in error status 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="question-action-submit"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 5,
              "borderWidth": 0,
              "height": 56,
            },
            Object {
              "backgroundColor": "#86B93B",
              "borderColor": "#86B93B",
            },
          ]
        }
        testID="question-action-submit"
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#86B93B",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ],
              false,
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 17,
                  },
                  undefined,
                  Object {
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontFamily": "Lato",
                  },
                  false,
                ],
              ]
            }
          >
            Try Again
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when more than two responses are present match snapshot if in success status 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="question-action-submit"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 5,
              "borderWidth": 0,
              "height": 56,
            },
            Object {
              "backgroundColor": "#86B93B",
              "borderColor": "#86B93B",
            },
          ]
        }
        testID="question-action-submit"
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#86B93B",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ],
              false,
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 17,
                  },
                  undefined,
                  Object {
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontFamily": "Lato",
                  },
                  false,
                ],
              ]
            }
          >
            OK
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when more than two responses are present render Ignore and Submit button 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="question-action-submit"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 5,
              "borderWidth": 0,
              "height": 56,
            },
            Object {
              "backgroundColor": "#86B93B",
              "borderColor": "#86B93B",
            },
          ]
        }
        testID="question-action-submit"
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#86B93B",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ],
              Object {
                "backgroundColor": "#dadee0",
              },
              Array [
                Object {
                  "backgroundColor": "#86B93B",
                },
                Object {
                  "opacity": 0.4,
                },
              ],
            ]
          }
        >
          <Text
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 17,
                  },
                  undefined,
                  Object {
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontFamily": "Lato",
                  },
                  undefined,
                ],
              ]
            }
          >
            Submit
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when one response is present match snapshot if in error status 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="question-action-submit"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 5,
              "borderWidth": 0,
              "height": 56,
            },
            Object {
              "backgroundColor": "#86B93B",
              "borderColor": "#86B93B",
            },
          ]
        }
        testID="question-action-submit"
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#86B93B",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ],
              false,
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 17,
                  },
                  undefined,
                  Object {
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontFamily": "Lato",
                  },
                  false,
                ],
              ]
            }
          >
            Try Again
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when one response is present match snapshot if in success status 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="question-action-submit"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 5,
              "borderWidth": 0,
              "height": 56,
            },
            Object {
              "backgroundColor": "#86B93B",
              "borderColor": "#86B93B",
            },
          ]
        }
        testID="question-action-submit"
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#86B93B",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ],
              false,
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 17,
                  },
                  undefined,
                  Object {
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontFamily": "Lato",
                  },
                  false,
                ],
              ]
            }
          >
            OK
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when one response is present render Ignore and response button 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={Object {}}
    >
      <View
        style={
          Object {
            "backgroundColor": "#86B93B",
            "borderColor": "#86B93B",
            "borderRadius": 5,
            "borderWidth": 1,
            "marginBottom": 15,
            "minHeight": 56,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "marginLeft": 15,
                "marginRight": 15,
              },
              undefined,
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="akdfakjfkjdaadkgak-submit"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ]
            }
            testID="akdfakjfkjdaadkgak-submit"
          >
            <View
              pointerEvents="box-only"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#9E9E9E",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 19,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  Object {
                    "backgroundColor": "#01C8A1",
                  },
                  undefined,
                  Object {
                    "padding": 12,
                  },
                  undefined,
                  undefined,
                  undefined,
                  Array [
                    null,
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 5,
                      "borderWidth": 0,
                      "height": 56,
                    },
                    Object {
                      "backgroundColor": "#86B93B",
                      "borderColor": "#86B93B",
                    },
                  ],
                  undefined,
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {},
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "fontSize": 17,
                      },
                      undefined,
                      Object {
                        "fontWeight": "bold",
                      },
                      Object {
                        "fontFamily": "Lato",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Yes
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when two responses are present match snapshot if in error status 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="question-action-submit"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 5,
              "borderWidth": 0,
              "height": 56,
            },
            Object {
              "backgroundColor": "#86B93B",
              "borderColor": "#86B93B",
            },
          ]
        }
        testID="question-action-submit"
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#86B93B",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ],
              false,
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 17,
                  },
                  undefined,
                  Object {
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontFamily": "Lato",
                  },
                  false,
                ],
              ]
            }
          >
            Try Again
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when two responses are present match snapshot if in success status 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginLeft": 15,
            "marginRight": 15,
          },
          undefined,
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          },
          undefined,
        ]
      }
    >
      <View
        accessibilityLabel="question-action-submit"
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 5,
              "borderWidth": 0,
              "height": 56,
            },
            Object {
              "backgroundColor": "#86B93B",
              "borderColor": "#86B93B",
            },
          ]
        }
        testID="question-action-submit"
      >
        <View
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#9E9E9E",
                "flexDirection": "row",
                "justifyContent": "center",
                "padding": 19,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "backgroundColor": "#86B93B",
              },
              undefined,
              Object {
                "padding": 12,
              },
              undefined,
              undefined,
              undefined,
              Array [
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ],
              false,
              false,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {},
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 14,
                  },
                  Object {
                    "fontSize": 17,
                  },
                  undefined,
                  Object {
                    "fontWeight": "bold",
                  },
                  Object {
                    "fontFamily": "Lato",
                  },
                  false,
                ],
              ]
            }
          >
            OK
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<QuestionActions /> when two responses are present render both response buttons and no ignore button 1`] = `
<View
  style={
    Object {
      "marginLeft": "3%",
      "width": "94%",
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#ffffff",
        "borderRadius": 5,
        "borderWidth": 1,
        "marginBottom": 15,
        "minHeight": 56,
      }
    }
  >
    <View
      style={Object {}}
    >
      <View
        style={
          Object {
            "borderColor": "#CE0B24",
            "borderRadius": 5,
            "borderWidth": 1,
            "marginBottom": 15,
            "minHeight": 56,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "marginLeft": 15,
                "marginRight": 15,
              },
              undefined,
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="No-submit"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                false,
              ]
            }
            testID="No-submit"
          >
            <View
              pointerEvents="box-only"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#9E9E9E",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 19,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  Object {
                    "backgroundColor": "white",
                  },
                  undefined,
                  Object {
                    "padding": 12,
                  },
                  undefined,
                  undefined,
                  undefined,
                  Array [
                    null,
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 5,
                      "borderWidth": 0,
                      "height": 56,
                    },
                    false,
                  ],
                  undefined,
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {},
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#CE0B24",
                      },
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "fontSize": 17,
                      },
                      undefined,
                      Object {
                        "fontWeight": "bold",
                      },
                      Object {
                        "fontFamily": "Lato",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Answer 2
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#86B93B",
            "borderColor": "#86B93B",
            "borderRadius": 5,
            "borderWidth": 1,
            "marginBottom": 15,
            "minHeight": 56,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "marginLeft": 15,
                "marginRight": 15,
              },
              undefined,
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
        >
          <View
            accessibilityLabel="YES-submit"
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 5,
                  "borderWidth": 0,
                  "height": 56,
                },
                Object {
                  "backgroundColor": "#86B93B",
                  "borderColor": "#86B93B",
                },
              ]
            }
            testID="YES-submit"
          >
            <View
              pointerEvents="box-only"
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#9E9E9E",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "padding": 19,
                  },
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  undefined,
                  Object {
                    "backgroundColor": "#01C8A1",
                  },
                  undefined,
                  Object {
                    "padding": 12,
                  },
                  undefined,
                  undefined,
                  undefined,
                  Array [
                    null,
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 5,
                      "borderWidth": 0,
                      "height": 56,
                    },
                    Object {
                      "backgroundColor": "#86B93B",
                      "borderColor": "#86B93B",
                    },
                  ],
                  undefined,
                  undefined,
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {},
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 14,
                      },
                      Object {
                        "fontSize": 17,
                      },
                      undefined,
                      Object {
                        "fontWeight": "bold",
                      },
                      Object {
                        "fontFamily": "Lato",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                Answer 1
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
